--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@nativescript/camera": "^5.0.13",
     "@nativescript/core": "~8.3.0",
     "@react-navigation/core": "^5.15.3",
     "react": "~16.13.1",
@@ -11,6 +12,7 @@
     "react-nativescript-navigation": "3.0.0-beta.2"
   },
   "devDependencies": {
+    "@nativescript/ios": "8.3.3",
     "@nativescript/types": "~8.3.0",
     "@nativescript/webpack": "~5.0.6",
     "@types/react": "16.9.34",
